# wisconsin_opht

./: LICENSE.md  README.md  pyproject.toml  requirements.txt  retina_filters.ipynb  text_pipeline.ipynb
sources/: ICD.csv
