[tool.poetry]
name = "wisconsin"
version = "0.1.0"
description = "Demonstration of translational skills in Ophthalmology and Computer Vision"
authors = ["Rafael Scherer"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0"
gdown = "^4.6.0"
scipy = "^1.9.3"
imageio = "^2.23.0"
nltk = "^3.8"
spacy = "^3.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
